--- a/hello-spring-cloud-alibaba-consumer-feign/bin/src/main/resources/application.yml
+++ b/hello-spring-cloud-alibaba-consumer-feign/bin/src/main/resources/application.yml
@@ -1,21 +1,26 @@
 spring:
   application:
-    name: consumer
+    name: consumer-feign
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.0.93:8848
+        server-addr: 127.0.0.1:8848
     sentinel:
       transport:
-        dashboard: 192.168.0.93:8080
+        dashboard: 127.0.0.1:8080
         # 当前应用被sentinel监控的端口
-        port: 8720
+        port: 8719
 
 server:
-  port: 9091
+  port: 9092
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+
+#sentinel
+feign:
+  sentinel:
+    enabled: true
