--- a/hello-spring-cloud-alibaba-provider/src/main/resources/application.yml
+++ b/hello-spring-cloud-alibaba-provider/src/main/resources/application.yml
@@ -1,19 +1,15 @@
 spring:
   application:
-    name: consumer
+    name: provider
   cloud:
     nacos:
       discovery:
         server-addr: 192.168.0.93:8848
-    sentinel:
-      transport:
-        dashboard: 192.168.0.93:8080
-        # 当前应用被sentinel监控的端口
-        port: 8720
 
 server:
-  port: 9091
-
+  port: 8081
+test:
+  config: 原始天尊
 management:
   endpoints:
     web:
